<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidDatabase</string>
    <string name="action_settings">Settings</string>
    <string name="name_hint">Name</string>
    <string name="education_hint">Education</string>
    <string name="mail_hint">Email</string>
    <string name="mobile_hint">Mobile</string>
    <string name="btn_save">Save</string>
    <string name="btn_show_all">Show All Contact</string>
  

</resources>
