<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etEducat"
        android:hint="@string/education_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
         />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mail_hint" />
    
    
    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile_hint" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="80dp"
        android:layout_marginTop="10dp"
        android:onClick="save"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnAllContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:onClick="showAll"
        android:text="@string/btn_show_all" />

</LinearLayout>